body overflow solved

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
 
 body {
   @apply font-denk;
+  overflow-x: hidden;
 }
   .nav-link {
     @apply relative font-semibold lg:mx-2 mx-1  cursor-pointer xl:text-[26px] md:text-[21px] text-xl  w-fit lg:block after:block after:content-[''] after:absolute after:h-[3px] after:bg-[#fff] after:w-full after:scale-x-0 after:hover:scale-x-100 after:transition after:duration-300 after:origin-center ;
